force-app/main/default/objects/OpportunityLineItem/fields/Report_Validation_Msg__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Msg__c</fullName>
    <formula>IF(Report_Validation_Prod__c==0,&quot;Ok&quot;,&quot;Warning&quot;) + IF(Acres_1_Validation__c!=0,&quot; | Acres vs Parent Seed&quot;,&quot;&quot;) + IF(Bushels_1_Validation__c!=0,&quot; | Bushels vs Acres&quot;,&quot;&quot;) + IF(Supply_1_Validation__c!=0,&quot; | Supply vs Bushels&quot;,&quot;&quot;)
+ IF(Acres_All_Validation__c!=0,&quot; | Acres vs Previous Acres&quot;,&quot;&quot;)+ IF(Bushels_All_Validation__c!=0,&quot; | Bushels vs Previous Bushels&quot;,&quot;&quot;) + IF(Supply_All_Validation__c!=0,&quot; | Supply vs Previous Supply&quot;,&quot;&quot;)
+ IF(Forecast_Validation__c!=0,&quot; | Forecast vs Forecast&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Validation Msg</label>
    <type>Text</type>
</CustomField>