force-app/main/default/objects/OpportunityLineItem/fields/Report_Validation_Prod__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Prod__c</fullName>
    <description>Acres_All_Validation__c+Bushels_All_Validation__c+Bushels_1_Validation__c+Acres_1_Validation__c+Forecast_Validation__c+Supply_1_Validation__c+Conditioned_Final_Validation__c</description>
    <formula>Acres_All_Validation__c+Bushels_All_Validation__c+Bushels_1_Validation__c+Acres_1_Validation__c+Supply_All_Validation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Validation Prod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>