force-app/main/default/objects/OpportunityLineItem/fields/Report_Validation_Sales__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Sales__c</fullName>
    <formula>Forecast_Validation__c+Conditioned_Final_Validation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Validation Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>