force-app/main/default/objects/OpportunityLineItem/fields/Reservation_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Whenever an Opportunity Reservation is made, and an Inventory Type Opportunity Product match is found by Product, Season, Plant, and Warehouse, this field will increase on the Inventory record by the Sale Qty</description>
    <label>Reservation Qty (by 140k)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>