force-app/main/default/objects/OpportunityLineItem/fields/Reservations_by_140k__c.field-meta.xml
<CustomField>
    <fullName>Reservations_by_140k__c</fullName>
    <formula>CASE(Opportunity.RecordType.Name,&apos;Reservation&apos;,Quantity_by_140k__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservations by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>