force-app/main/default/objects/OpportunityLineItem/fields/Returned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Returned_Quantity__c</fullName>
    <description>Cantidad de Nota de crédito por devolución de SAP</description>
    <inlineHelpText>Quantity of returned bags. Sync manually with SAP data.</inlineHelpText>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>