force-app/main/default/objects/OpportunityLineItem/fields/Royalty_discount_achieved__c.field-meta.xml
<CustomField>
    <fullName>Royalty_discount_achieved__c</fullName>
    <label>Royalty Price Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>