force-app/main/default/objects/OpportunityLineItem/fields/Royalty_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Estimation__c</fullName>
    <label>Royalty Estimation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>