force-app/main/default/objects/OpportunityLineItem/fields/Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Rate__c</fullName>
    <label>Royalty Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>