force-app/main/default/objects/OpportunityLineItem/fields/Royalty_Rate_Validation__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Rate_Validation__c</fullName>
    <formula>IF(Royalty_Rate__c &lt; List_Royalty_Rate__c,IF(Royalty_Rate__c &lt; (0.99 * List_Royalty_Rate__c),10,1),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Royalty Rate Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>