force-app/main/default/objects/OpportunityLineItem/fields/Royalty_Sale__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Sale__c</fullName>
    <formula>IF(AND(Opportunity.RecordType.Name=&apos;Sale&apos;, TEXT(PricebookEntry.Product2.Family)=&apos;Royalty&apos;),Quantity_by_140k__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Royalty Sale by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>