force-app/main/default/objects/OpportunityLineItem/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <formula>TEXT(Opportunity.Safra__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safra</label>
    <type>Text</type>
</CustomField>