force-app/main/default/objects/OpportunityLineItem/fields/Sales_by_140__c.field-meta.xml
<CustomField>
    <fullName>Sales_by_140__c</fullName>
    <formula>CASE(Opportunity.RecordType.Name,&apos;Sale&apos;,Quantity_by_140k__c,&apos;Sale Request&apos;,Quantity_by_140k__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>