force-app/main/default/objects/OpportunityLineItem/fields/Sales_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Report_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Production Update 1</fullName>
            </value>
            <value>
                <fullName>Production Update 2</fullName>
            </value>
            <value>
                <fullName>Production Update 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>