force-app/main/default/objects/OpportunityLineItem/fields/Seed_per_pound__c.field-meta.xml
<CustomField>
    <fullName>Seed_per_pound__c</fullName>
    <label>Seed Per Pound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>