force-app/main/default/objects/OpportunityLineItem/fields/Semente_aprovada__c.field-meta.xml
<CustomField>
    <fullName>Semente_aprovada__c</fullName>
    <inlineHelpText>Unit: 140 k Seeds Bag</inlineHelpText>
    <label>Baggaged Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>