force-app/main/default/objects/OpportunityLineItem/fields/Semente_beneficiada__c.field-meta.xml
<CustomField>
    <fullName>Semente_beneficiada__c</fullName>
    <description>Unit: 140 k Seeds Bag Production/Conditioning Reports</description>
    <inlineHelpText>Unit: 140 k Seeds Bag Production/Conditioning Reports</inlineHelpText>
    <label>Conditioned 140K Units (Supply)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>