force-app/main/default/objects/OpportunityLineItem/fields/Semente_bruta__c.field-meta.xml
<CustomField>
    <fullName>Semente_bruta__c</fullName>
    <inlineHelpText>Unit: Bushels - Final Production Report</inlineHelpText>
    <label>Production Bushels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>