force-app/main/default/objects/OpportunityLineItem/fields/Semente_comercializada__c.field-meta.xml
<CustomField>
    <fullName>Semente_comercializada__c</fullName>
    <label>Commercial Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>