force-app/main/default/objects/OpportunityLineItem/fields/Semente_uso_propio__c.field-meta.xml
<CustomField>
    <fullName>Semente_uso_propio__c</fullName>
    <description>Units Used for Production (Parent Seeds)</description>
    <inlineHelpText>Units Used for Production (Parent Seeds)</inlineHelpText>
    <label>Units Used for Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>