force-app/main/default/objects/OpportunityLineItem/fields/Shipping_Costs__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Costs__c</fullName>
    <label>Shipping Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>