force-app/main/default/objects/OpportunityLineItem/fields/Sub_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Amount__c</fullName>
    <label>Sub Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>