force-app/main/default/objects/OpportunityLineItem/fields/Supply_All_Validation__c.field-meta.xml
<CustomField>
    <fullName>Supply_All_Validation__c</fullName>
    <description>New Supply vs Previous Reported Supply (Max:1.2, Min: 0.8)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)=&apos;Production Update 1&apos;,0,IF(Prev_Supply__c=0,0,IF(Prev_Supply__c*1.2&gt;=Semente_beneficiada__c,IF(Prev_Supply__c*0.8&lt;=Semente_beneficiada__c,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Supply vs Previous Reported Supply (Max:1.2, Min: 0.8)</inlineHelpText>
    <label>Supply All Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>