force-app/main/default/objects/OpportunityLineItem/fields/Test_Acres__c.field-meta.xml
<CustomField>
    <fullName>Test_Acres__c</fullName>
    <label>Test Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>