force-app/main/default/objects/OpportunityLineItem/fields/Test_Bushels__c.field-meta.xml
<CustomField>
    <fullName>Test_Bushels__c</fullName>
    <label>Test Bushels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>