force-app/main/default/objects/OpportunityLineItem/fields/Test_Plots_Units__c.field-meta.xml
<CustomField>
    <fullName>Test_Plots_Units__c</fullName>
    <inlineHelpText>Unit: 140k seeds Bag</inlineHelpText>
    <label>Test/Plots Units (140k)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>