force-app/main/default/objects/OpportunityLineItem/fields/Test_Seed_Sale__c.field-meta.xml
<CustomField>
    <fullName>Test_Seed_Sale__c</fullName>
    <formula>IF(AND(Opportunity.RecordType.Name=&apos;Sale&apos;, TEXT(Opportunity.Type)=&apos;Z18 - TEST SEED&apos;),Quantity_by_140k__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Seed Sale by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>