force-app/main/default/objects/OpportunityLineItem/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Includes Sale Quantity - returned bags by Sale Price, plus pallet and shipping costs.</description>
    <formula>Qty_x_Price__c+Pallet_Charge__c+Shipping_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes Sale Quantity - returned bags by Sale Price, plus pallet and shipping costs.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>