force-app/main/default/objects/OpportunityLineItem/fields/Total_Harvested_Acres__c.field-meta.xml
<CustomField>
    <fullName>Total_Harvested_Acres__c</fullName>
    <formula>Test_Acres__c + Area_Plantada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Harvested Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>