force-app/main/default/objects/OpportunityLineItem/fields/Total_Harvested_Bushels__c.field-meta.xml
<CustomField>
    <fullName>Total_Harvested_Bushels__c</fullName>
    <formula>Test_Bushels__c +  Semente_bruta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Harvested Bushels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>