force-app/main/default/objects/OpportunityLineItem/fields/Total_Replant_Claim__c.field-meta.xml
<CustomField>
    <fullName>Total_Replant_Claim__c</fullName>
    <label>Replant Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>