force-app/main/default/objects/OpportunityLineItem/fields/Unconditioned_Bushels__c.field-meta.xml
<CustomField>
    <fullName>Unconditioned_Bushels__c</fullName>
    <description>Unit: Seeds Bushels - Unconditioned Production/Conditioning Reports</description>
    <inlineHelpText>Unit: Seeds Bushels - Unconditioned Production/Conditioning Reports</inlineHelpText>
    <label>Unconditioned Bushels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>