force-app/main/default/objects/OpportunityLineItem/fields/Unit_for_production_BB__c.field-meta.xml
<CustomField>
    <fullName>Unit_for_production_BB__c</fullName>
    <label>Estimated Units Used Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>