force-app/main/default/objects/OpportunityLineItem/fields/Unit_Totals__c.field-meta.xml
<CustomField>
    <fullName>Unit_Totals__c</fullName>
    <description>IF(AND(TEXT(Opportunity.Marca__c)!=&apos;DONMARIO&apos;,TEXT(Opportunity.Type)=&apos;Final Sales Report&apos;),Test_Plots_Units__c +  Semente_comercializada__c +  Semente_uso_propio__c,0)</description>
    <formula>IF(TEXT(Opportunity.Type)=&apos;Final Sales Report&apos;,Test_Plots_Units__c +  Semente_comercializada__c +  Semente_uso_propio__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Totals (140K)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>