force-app/main/default/objects/OpportunityLineItem/fields/Unit_Totals_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Totals_Value__c</fullName>
    <label>Unit Totals Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>