force-app/main/default/objects/OpportunityLineItem/fields/Units_Estimate_140K__c.field-meta.xml
<CustomField>
    <fullName>Units_Estimate_140K__c</fullName>
    <label>Estimated Supply (140K)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>