force-app/main/default/objects/OpportunityLineItem/fields/Update_Values__c.field-meta.xml
<CustomField>
    <fullName>Update_Values__c</fullName>
    <label>Update Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>