force-app/main/default/objects/OpportunityLineItem/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Variedades que pueden incluirse en el contrato de multiplicacion</description>
    <label>Variety Name DO NOT USE</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>