force-app/main/default/objects/OpportunityLineItem/fields/Variedade_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Variedade_de_Produto__c</fullName>
    <formula>PricebookEntry.Product2.Variedade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDM Commercial Code</label>
    <type>Text</type>
</CustomField>