force-app/main/default/objects/OpportunityLineItem/fields/Variedade_Prod__c.field-meta.xml
<CustomField>
    <fullName>Variedade_Prod__c</fullName>
    <formula>PricebookEntry.Product2.Licensee_Variety_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee Cultivar Number DO NOT USE</label>
    <type>Text</type>
</CustomField>