force-app/main/default/objects/OpportunityLineItem/fields/Variety_Number__c.field-meta.xml
<CustomField>
    <fullName>Variety_Number__c</fullName>
    <formula>PricebookEntry.Product2.Variedade__r.Variety_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Number</label>
    <type>Text</type>
</CustomField>