force-app/main/default/objects/OpportunityLineItem/fields/VGPOS__c.field-meta.xml
<CustomField>
    <fullName>VGPOS__c</fullName>
    <label>z_VGPOS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>