force-app/main/default/objects/OpportunityLineItem/fields/Waiting_Sync_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Sync_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting Sync To Delete</label>
    <type>Checkbox</type>
</CustomField>