force-app/main/default/objects/OpportunityLineItem/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Centro_de_despacho__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEVE-DEVELOPMENT</fullName>
            </value>
            <value>
                <fullName>COME-COMERCIAL</fullName>
            </value>
            <value>
                <fullName>PROD-PRODUCTION</fullName>
            </value>
            <value>
                <fullName>RESE-RESEARCH</fullName>
            </value>
            <value>
                <fullName>ADM -ADMINISTRATION</fullName>
            </value>
            <value>
                <fullName>W001-CHAMPAIGN WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>W001-GDM - HUTCHINSON</fullName>
            </value>
            <value>
                <fullName>W001-GDM - DES MOINES</fullName>
            </value>
            <value>
                <fullName>W001-GIBSON CITY WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>W001-JONESBORO WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>W001-PRO AG WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>T001-KAUFFMAN</fullName>
            </value>
            <value>
                <fullName>T002-STRATTON SEED-AR</fullName>
            </value>
            <value>
                <fullName>T003-SGD</fullName>
            </value>
            <value>
                <fullName>T004-PLANTATION SEED</fullName>
            </value>
            <value>
                <fullName>T005-GENERATION FARMS</fullName>
            </value>
            <value>
                <fullName>T006-JMR FARMS</fullName>
            </value>
            <value>
                <fullName>T007-STRATTON - ANNISTON</fullName>
            </value>
            <value>
                <fullName>T001-PRO AG CHB (ARG)</fullName>
            </value>
            <value>
                <fullName>TC01-Shoffner Comercial</fullName>
            </value>
            <value>
                <fullName>TP01-Shoffner Production</fullName>
            </value>
            <value>
                <fullName>TC02-CRV Comercial</fullName>
            </value>
            <value>
                <fullName>TP02-CRV Production</fullName>
            </value>
            <value>
                <fullName>TC03-Burrus Seed Comercial</fullName>
            </value>
            <value>
                <fullName>TP03-Burrus Seed Production</fullName>
            </value>
            <value>
                <fullName>TC05-CPS Comercial</fullName>
            </value>
            <value>
                <fullName>TP05-CPS Production</fullName>
            </value>
            <value>
                <fullName>TC06-Remington Wal.Comercial</fullName>
            </value>
            <value>
                <fullName>TP06-Remington Wal.Production</fullName>
            </value>
            <value>
                <fullName>TC07-Stratton AR Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>