force-app/main/default/objects/OpportunityLineItem/fields/Wholesale_Sales__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Sales__c</fullName>
    <inlineHelpText>Unit: 140k seeds Bag</inlineHelpText>
    <label>Wholesale OUT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>