force-app/main/default/objects/OpportunityLineItem/fields/Wholesale_Seed_Sale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Seed_Sale__c</fullName>
    <formula>IF(AND(Opportunity.RecordType.Name=&apos;Sale&apos;, TEXT(Opportunity.Type)=&apos;Z19 - WHOLESALE SEED&apos;),Quantity_by_140k__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale Seed Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>