force-app/main/default/objects/OpportunityLineItem/fields/Yield_Average__c.field-meta.xml
<CustomField>
    <fullName>Yield_Average__c</fullName>
    <inlineHelpText>Unit: Bushels</inlineHelpText>
    <label>Average Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>