force-app/main/default/objects/OpportunityLineItem/fields/ZZPOSSF__c.field-meta.xml
<CustomField>
    <fullName>ZZPOSSF__c</fullName>
    <label>z_ZZPOSSF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>