force-app/main/default/objects/OpportunityLineItem/validationRules/Exclusive_variety_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclusive_variety_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISBLANK(Product2.Variedade__r.Exclusive_Licensee__c),false,AND(Opportunity.AccountId &lt;&gt; Product2.Variedade__r.Exclusive_Licensee__c,NOT(Opportunity.Allow_Exclusive_Varieties__c),Opportunity.RecordType.Name=&apos;Sale&apos;))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Validation Rule: This exclusive variety owner doen&apos;t match the sale order account.</errorMessage>
</ValidationRule>